# ai-news-aggregator

./: .gitignore  architectural diagram.md  index.html  main.py  pyproject.toml  requirements.txt
app/: __init__.py  api.py
app/database/: connection.py  repository.py
app/scrapers/: anthropic.py  openai.py  youtube.py
app/services/: process_email.py
